--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                       Donation
                     </button>
                     <button
-                      id="history-tab"
+                      id="btnHistoryTab"
                       class="sm:w-1/12 py-2 rounded-md border-4 text-gray-600 font-semibold bg-neutral-50"
                     >
                       History
@@ -195,19 +195,21 @@
 
                 <!-- history part start -->
                  <div
-                 id="history-section" 
-                 class=" p-4 rounded-lg shadow-md border border-blue-200 mt-2">
+                      id="history-section" 
+                      class=" p-4 rounded-lg shadow-md border border-blue-200 mt-2">
 
-                 <h3
-                 id="heading-history"
-                 class="text-lg font-semibold mb-4 text-center text-black"
-               >
-               96500 Taka is Donated for famine-2024 at Feni, Bangladesh
-               </h3>
-               <p id="date-history" 
-               class="text-base mb-4 text-center text-stone-400">
-                Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)
-               </p>
+                      <h3
+                        id="heading-history"
+                        class="text-lg font-semibold mb-4 text-center text-black">
+                        96500 Taka is Donated for famine-2024 at Feni, Bangladesh
+                    </h3>
+                      <p 
+                        id="date-history" 
+                        class="text-base mb-4 text-center text-stone-400">
+                        Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)
+                      </p>
+                     
+                      
 
                  </div>
                 <!-- history part end -->
