--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <!-- history part start -->
                  <div
                       id="history-section" 
-                      class=" p-4 rounded-lg shadow-md border border-blue-200 mt-2">
+                      class="hidden p-4 rounded-lg shadow-md border border-blue-200 mt-2">
 
                       <h3
                         id="heading-history"
