menu bar adjusttrying

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 </head>
 
 <body class="lexend">
-    <main class="container mx-auto">
+    <!-- <main class="container mx-auto"> -->
+    <main class="w-11/12 mx-auto">
       
-      <header class="text-4xl mb-10 ml-2 ">
+      <header class="text-4xl mb-10">
         <!-- nav start -->
-        <div class="flex-no-wrap flex lg:w-[81%] items-center justify-center bg-slate-100 lg:pl-16 lg:pr-16  fixed top-0 z-10">
+        <div class="flex-no-wrap flex w-full items-center justify-center bg-slate-100 fixed top-0 z-10">
             <div class="navbar-start mt-4 ">
               
               <button id="blogButton" class="text-xl lg:w-1/6  bg-lime-300 rounded-md p-2 text-center ml-4">
