netlyfy for js update path

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="navbar-end flex lg:items-start gap-2 justify-center ">
               <img class="mt-4" src="./assets/logo/coin.png" alt="coin">
               <div class="gap-1 lg:text-xl items-center flex text-sm mt-4">
-                <a><span id="TxtCashInHand ">5500</span></a>
+                <a><span id="TxtCashInHand">5500</span></a>
               <a><span>BDT</span></a>
               </div>
             </div>
@@ -233,9 +233,9 @@
         </div>
     </div>
             
-            <script src="./assets/js/index.js"></script>
-            <script src="./assets/js/utilities.js"></script>
-            <script src="./assets/js/link.js"></script>
+            <script src="/assets/js/index.js"></script>
+            <script src="/assets/js/utilities.js"></script>
+            <script src="/assets/js/link.js"></script>
 
         </body>
         <footer>
